--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     tools:context=".MainActivity" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/app_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -16,27 +16,53 @@
         android:text="@string/information" />
     
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/url_prefix_label"
         style="?android:attr/listSeparatorTextViewStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/textView1"
+        android:layout_below="@+id/app_description"
+        android:layout_marginTop="20dp"
+        android:text="@string/url_prefix"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+    
+    <EditText
+        android:id="@+id/url_prefix"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/app_description"
+        android:layout_alignRight="@+id/app_description"
+        android:layout_below="@+id/url_prefix_label"
+        android:layout_marginTop="20dp"
+        android:ems="10"
+        android:hint="@string/url_prefix"
+        android:inputType="text|textUri" />
+    
+    <TextView
+        android:id="@+id/optional_settings"
+        style="?android:attr/listSeparatorTextViewStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/url_prefix"
         android:layout_marginTop="20dp"
         android:text="@string/optional_settings"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <EditText
-        android:id="@+id/searchSuffix"
+        android:id="@+id/search_suffix"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_alignRight="@+id/textView1"
-        android:layout_below="@+id/textView2"
+        android:layout_alignLeft="@+id/app_description"
+        android:layout_alignRight="@+id/app_description"
+        android:layout_below="@+id/optional_settings"
         android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="@string/search_string_suffix"
         android:inputType="text|textNoSuggestions" />
+    
+    
 
 </RelativeLayout>
